# cmdlets

./: .dockerignore  .env  .gitignore  .shellcheckrc  Makefile  README.cmdlet.bat.md  README.md  README.windows.md  bootstrap.windows.sh  cmdlet.bat  cmdlets.bat  cmdlets.env.mingw64  cmdlets.sh  dependents.sh  helpers.sh  libs.sh  notes.md  pkgfiles.sh  search  test-cmdlet-native.sh  test-cmdlet.bat.sh  test-cmdlets-full.sh  test.lua  ulib.sh  ulog.sh
.github/dockerfiles/: Dockerfile
.github/scripts/: build.sh  prepare.sh  rsync.sh  update.sh
.github/workflows/: build-github.yml  build-host.yml  build-latest.yml  build-macos.yml  build-msys2.yml  build-multi-arch.yml  cmdlets.yml  update-revision.yml  update.yml
ffmpeg/: CMakeLists.txt  FFmpeg.h.in  FFmpeg.syms  FFmpeg.ver  Info.plist  frei0r.sh  stub.cpp
libs/: .gettext.s  .gettext.u  @ffmpeg.s  @ffmpeg.u  ALL.s  ALL.u  OpenCL.s  OpenCL.u  _coreutils.s  _curl.s  _exiv2.s  _findutils.s  _findutils.u  _gettext.u  _gnutls.s  _libarchive.s  _libpq.s  _librsvg.s  _linux-pam.s  act.s  act.u  amr.s  amr.u  aria2.s  arping.s  bash.s  bash.u  bash32.s  bash32.u  bash44.s  bash44.u  bash@3.2.u  bash@4.4.u  bat.s  bind.s  boost.s  brotli.s  brotli.u  bzip2.s  bzip2.u  (+329 more)
libs/deprecated/: eza.s
libs/draft/: _conntrack.s  _curl.s  _diffutils.s  _findutils.s  _libjxl.s  _libpcap.s  _rustnet.s  bash.s  cygwin.s  forklib.s  git-bash.s  gtar.s  libintl.s  mingw-w64.s  msys2.s
libs/ffmpeg/: common.s  ffmpeg4.s  ffmpeg5.s  ffmpeg6.s  ffmpeg7.s
scripts/: cc.sh  cxx.sh  pkg-config  pkg_config.sh  toolchain.sh
wrapper/: pkg_config.sh
